# cfengine2

./: README.md  cfengine2_2.2.10-5+patches1.dsc  cfengine2_2.2.10-5.dsc  cfengine2_2.2.10-7+patches1.debian.tar.xz  cfengine2_2.2.10-7+patches1.dsc  cfengine2_2.2.10-7.debian.tar.xz  cfengine2_2.2.10-7.dsc
cfengine-2.2.10/: configure.ac
cfengine-2.2.10/contrib/: Makefile.am  cfdoc
cfengine-2.2.10/debian/: cfengine2.NEWS  cfengine2.config  cfengine2.default  cfengine2.doc-base  cfengine2.info  cfengine2.init  cfengine2.install  cfengine2.links  cfengine2.templates  changelog  clean  control  copyright  dirs  examples  postinst  postrm  preinst  rules  watch
cfengine-2.2.10/debian/patches/: 0001-Don-t-truncate-the-action-s-pseudo-path-names-before.patch  0002-Fix-timestamp-that-GetLastLock-uses-to-determine-whe.patch  0003-Batch-up-fdatasync-calls-to-cfengine_lock_db-and-per.patch  0004-Enable-TCP_NODELAY-to-avoid-waiting-for-buffers-to-f.patch  511666-segfault.patch  658945-drop-getopts-pl.patch  add-missing-manpages.patch  build-info-and-html.patch  build-info.patch  fix-hyphens-in-manpages.patch  fix-install-perms.patch  fix-man-sections.patch  fix-manpages-paths.patch  kfreebsd-configure  (+4 more)
cfengine-2.2.10/doc/: Makefile.am  cfagent.8  cfdoc.8  cfengine.8  cfenvd.8  cfenvgraph.8  cfetool.8  cfetoolcheck.8  cfetoolcreate.8  cfetooldump.8  cfetoolgraph.8  cfetoolimport.8  cfetoolinfo.8  cfetoolupdate.8  cfexecd.8  cfkey.8  cfrun.8  cfservd.8  cfshow.8
cfengine-2.2.10/inputs/: Makefile.am
cfengine-2.2.10/pub/: LICENSE.txt
cfengine-2.2.10/src/: acl.c  cf.defs.h  cf.extern.h  cfagent.c  cfenvd.c  cfetool.c  cfexecd.c  cfkey.c  cfservd.c  cfshow.c  client.c  do.c  env_monitor.c  globals.c  install.c  instrument.c  ip.c  locks.c  nameinfo.c  parse.c  prototypes.h  wrapper.c
(+18 files in other folders)
